# shop-app

./: .env  Dockerfile  Makefile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: database.py  models.py  schemas.py
app/routers/: .gitignore  categories.py  products.py
migrations/: env.py
migrations/versions/: c5fe2bb69e94_create_categories_table.py
tests/: test_categories.py  test_products.py
